# cyrial_helloworld

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
pkrb-landing-develop/: .dockerignore  .gitignore  Dockerfile  nx.json  package-lock.json  package.json  tsconfig.base.json
pkrb-landing-develop/apps/: .gitignore
pkrb-landing-develop/apps/decentsol/: jest.config.js  project.json
pkrb-landing-develop/apps/decentsol-e2e/: cypress.json  project.json
pkrb-landing-develop/apps/decentsol-e2e/src/integration/: app.spec.ts
pkrb-landing-develop/apps/decentsol/src/: app.tsx  index.html  main.tsx  polyfills.ts  solana-wallet.styles.css  styles.css
pkrb-landing-develop/apps/decentsol/src/components/mydsol/: HorizontalNav.tsx  VerticalNav.tsx
pkrb-landing-develop/apps/decentsol/src/contexts/language/: LanguageContextProvider.tsx
pkrb-landing-develop/apps/decentsol/src/languages/en-us/: index.ts
pkrb-landing-develop/apps/decentsol/src/pages/: AvatarPage.tsx  GovernorPage.tsx  MyDsol.page.tsx  ProposalPage.tsx  StakepoolPage.tsx  ValidatorPage.tsx  WalletPage.tsx
pkrb-landing-develop/apps/decentsol/src/routes/: routes.tsx
pkrb-landing-develop/apps/decentsol/src/theme/: theme.ts
pkrb-landing-develop/apps/poker-blocks/: package-lock.json  package.json  project.json
pkrb-landing-develop/apps/poker-blocks/public/: index.html  manifest.json
pkrb-landing-develop/apps/poker-blocks/src/: App.tsx  index.css  index.tsx
pkrb-landing-develop/apps/poker-blocks/src/components/: GettingStarted.component.tsx  OurTeam.component.tsx  Roadmap.component.tsx  WhitePaper.component.tsx
pkrb-landing-develop/apps/poker-blocks/src/components/game/: GamePageLayout.tsx  VerticalNav.tsx
pkrb-landing-develop/apps/poker-blocks/src/components/home/: Carousel.component.tsx  Home.component.tsx  Sponsors.component.tsx  Welcome.component.tsx
pkrb-landing-develop/apps/poker-blocks/src/components/shared/: Footer.component.tsx  Navigation.component.tsx
pkrb-landing-develop/apps/poker-blocks/src/contexts/language/: languageContext.ts
pkrb-landing-develop/apps/poker-blocks/src/languages/en-us/: website.ts
pkrb-landing-develop/apps/poker-blocks/src/pages/: LandingLayout.tsx
pkrb-landing-develop/apps/poker-blocks/src/routes/: routes.tsx
pkrb-landing-develop/apps/poker-blocks/src/theme/: theme.ts
pkrb-landing-develop/libs/blockchain/dsol-chain/: README.md  jest.config.js  project.json  tsconfig.json
pkrb-landing-develop/libs/dsol/util-interfaces/: README.md  jest.config.js  project.json
pkrb-landing-develop/libs/dsol/util-interfaces/src/: index.ts
pkrbengine-master/: .gitignore  package-lock.json  package.json
pkrbengine-master/src/: app.module.ts  app.service.ts  main.ts
pkrbengine-master/src/config/: config.ts
pkrbengine-master/src/controllers/: game.controller.ts  lobby.controller.ts  rewards.comtroller.ts
pkrbengine-master/src/events/: game-events.gateway.ts
pkrbengine-master/src/exceptions/: exception.ts
pkrbengine-master/src/models/: Card.ts  CardSuit.ts  Game.ts  GamePlayer.ts  GameTable.ts  Hand.ts  HandAction.ts  HandCard.ts  HandCommunity.ts  HandDetail.ts  HandWinner.ts  Player.ts  PlayerHole.ts  XpClaim.ts  create-dto.ts  init-models.ts
pkrbengine-master/src/modules/: game-events.module.ts  game.module.ts  lobby.module.ts  rewards.module.ts
pkrbengine-master/src/seeders/: seeder.cards.ts  seeder.tables.ts
pkrbengine-master/src/services/: axios.service.ts  card-suit.service.ts  card.service.ts  game-player.service.ts  game-table.service.ts  game.service.ts  hand-action.service.ts  hand-card.service.ts  hand-community.service.ts  hand-detail.service.ts  hand-winner.service.ts  hand.service.ts  player-hole.service.ts  player.service.ts  xp-claim.service.ts
pkrbengine-master/src/tasks/: tasks.hand.ts
program/: Cargo.toml  README.md
program/src/: Untitled-1.ipynb  arweave-key.json  lib.rs  tempCodeRunnerFile.rs  upload_images.ipynb
programs/Avatar/: Cargo.toml
programs/Avatar/deploy/: keypair.json
programs/Avatar/src/: Burning.ipynb  Client.ipynb  Lease_avatar.ipynb  Rent Avatar.ipynb  Untitled-1.ipynb  arweave.ipynb  claim_xp.ipynb  close_lease_listing.ipynb  create_account_rent_space.ipynb  create_payer_account.ipynb  create_sales_account.ipynb  end renting.ipynb  lib.rs  upload_images.ipynb  uploaded_images.json
programs/Dao/: Cargo.toml
programs/Dao/deploy/: keypair.json
programs/Dao/src/: client.ipynb  create_proposals_account.ipynb  deployment_keypair.json  lib.rs  refund_africa.ipynb
programs/Dsol/: Cargo.toml
programs/Dsol/deploy/: keypair.json
programs/Dsol/src/: dsol_client.ipynb  lib.rs
programs/GlobalRepo/: Cargo.toml  global_repo.py
programs/GlobalRepo/src/: error.rs  instruction_enums.rs  lib.rs
programs/Governor/: Cargo.toml
programs/Governor/deploy/: keypair.json
programs/Governor/src/: Untitled-1.ipynb  borrow_more.ipynb  create_sales_account.ipynb  lib.rs  pay_loan.ipynb  stake.ipynb  take_loan.ipynb  test.js  upload_images.ipynb  uploaded_images.json
programs/Lounge/: Cargo.toml
programs/Lounge/deploy/: keypair.json
programs/Lounge/src/: add_to_lounge.ipynb  create_lounge_account.ipynb  lib.rs  remove_from_lounge copy.ipynb
programs/Marketplace/: Cargo.toml
programs/Marketplace/deploy/: keypair.json
programs/Marketplace/src/: Client.ipynb  close_limit_order.ipynb  create_collection.ipynb  create_limit_order.ipynb  create_payer_collection.ipynb  fill_limit_order.ipynb  lib.rs
programs/Mockups/deploy/: dao-keypair.json
programs/Mockups/src/: arweave-key.json  arweave.ipynb  create_sales_account.ipynb
programs/Stakepool/: client.ipynb  geolocation.ipynb
programs/Stakepool/stake_pool/: instructions.py
programs/Table/: Cargo.toml  upload_images.json
programs/Table/deploy/: keypair.json
programs/Table/src/: Untitled-1.ipynb  create_sales_account.ipynb  fin_mint.ipynb  init_mint_client.ipynb  lib.rs  sign_table.ipynb  upload_images.ipynb
src/: App.js  Burning.ipynb  Untitled-1.ipynb  arweave.ipynb  constants.js  create_sales_account.ipynb  index.js  lib.rs
(+28 files in other folders)
