[package]
name = "cyrial_helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# no-entrypoint = []


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.9.3"
# solana-sdk = "1.9.3"
spl-token = { version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "=1.9.3"
# solana-sdk = "=1.9.3"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"]}
spl-token = "3.2.0"


[lib]
# name = "cyrial_helloworld"
crate-type = ["cdylib","lib"]