[package]
name = "dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.9.6"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"]}
spl-token = { version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[lib]
name = "dao"
crate-type = ["cdylib","lib"]   

[package.metadata.x]
build-deploy-address = "cargo build-bpf && solana program deploy --program-id /mnt/c/Users/ckamd/OneDrive/Desktop/Rust_Solana/cyrial_helloworld/programs/Dao/deploy/keypair.json /mnt/c/Users/ckamd/OneDrive/Desktop/Rust_Solana/cyrial_helloworld/programs/Dao/target/deploy/Dao.so"
build-deploy = "cargo build-bpf && solana program deploy /mnt/c/Users/ckamd/OneDrive/Desktop/Rust_Solana/cyrial_helloworld/programs/Dao/target/deploy/Dao.so"
