[package]
name = "global_repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.6"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"]}
thiserror = "1.0"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"

[package.metadata.x]
build-deploy = "cd ../dsol && cargo-x build-deploy-address && cd ../avatar && cargo-x build-deploy-address && cd ../governor && cargo-x build-deploy-address && cd ../table && cargo-x build-deploy-address && cd ../dao && cargo-x build-deploy-address && cd ../marketplace && cargo-x build-deploy-address"