[package]
name = "governor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# no-entrypoint = []


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.9.6"
# solana-sdk = "1.9.4"
spl-token = { version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"]}
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"]}
global_repo = { path = "../GlobalRepo"}


[dev-dependencies]
solana-program-test = "1.9.6"
# solana-sdk = "=1.9.4"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"]}
spl-token = "3.2.0"


[lib]
name = "governor"
crate-type = ["cdylib","lib"]   

[package.metadata.x]
build-deploy-address = "cargo build-bpf && solana program deploy --program-id /mnt/c/Users/ckamd/OneDrive/Desktop/Rust_Solana/cyrial_helloworld/programs/Governor/deploy/keypair.json /mnt/c/Users/ckamd/OneDrive/Desktop/Rust_Solana/cyrial_helloworld/programs/Governor/target/deploy/Governor.so"
build-deploy = "cargo build-bpf && solana program deploy /mnt/c/Users/ckamd/OneDrive/Desktop/Rust_Solana/cyrial_helloworld/programs/Governor/target/deploy/Governor.so"