[package]
name = "Table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.9.6"
# solana-sdk = "1.9.4"
spl-token = { version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"]}
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"]}
global_repo = { path = "../GlobalRepo"}

[dev-dependencies]
solana-program-test = "1.9.6"
# solana-sdk = "=1.9.4"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"]}
spl-token = "3.2.0"



[lib]
name = "table"
crate-type = ["cdylib","lib"]   


[package.metadata.x]

build-deploy-address = "cargo build-bpf && solana program deploy --program-id ../table/deploy/keypair.json ../table/target/deploy/table.so"
build-deploy = "cargo build-bpf && solana program deploy /table/target/deploy/table.so"